--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,10 @@
     <footer class="footer">
         <span class="colophon">©2022 Aaron Paden <a class="footer-link" href="mailto:aaronbpaden@gmail.com">&lt;aaronbpaden@gmail.com&gt;</a></span>
-        <a class="footer-link" href="/all">Full Product Catalog</a>
+        <div class="footer-links">
+            <a class="footer-link" href="/items">Full Product Catalog</a> | <a class="footer-link" href="/about">About</a>
+        </div>
     </footer>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.1/dist/js/splide.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <script type="module" src="/js/app.js"></script>
