--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
           <li class="nav-item"><a class="category-nav-link nav-link" href="/anvils">Anvils</a></li>
           <li class="nav-item"><a class="category-nav-link nav-link" href="/encabulators">Encabulators</a></li>
           <li class="nav-item"><a class="category-nav-link nav-link" href="/leisure">Leisure</a></li>
-          <li class="nav-item"><a class="category-nav-link nav-link" href="miracle remedies">Miracle Remedies</a></li>
+          <li class="nav-item"><a class="category-nav-link nav-link" href="/miracle remedies">Miracle Remedies</a></li>
         </ul>
       </nav>
       <button class="btn checkout-button">
