--- a/acme-react-app/public/css/style.css
+++ b/acme-react-app/public/css/style.css
@@ -143,7 +143,8 @@ body {
 
 .about-box,
 .item-info-box,
-.items-list-item {
+.items-list-item,
+.login-box {
   padding: 2rem;
   border: 4px solid var(--trim);
   border-radius: 10px;
@@ -153,6 +154,23 @@ body {
   text-align: justify;
   hyphens: auto;
   box-shadow: var(--shadow);
+}
+
+.login-box > form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.login-textbox,
+.login-checkbox {
+  align-self: flex-start;
+  margin-left: 4rem;
+}
+
+.login-box .checkout-button {
+  align-self: flex-start;
+  font-size: 2rem;
 }
 
 .item-smalltext {
