--- a/acme-react-app/public/css/style.css
+++ b/acme-react-app/public/css/style.css
@@ -7,7 +7,7 @@
   --trim: #9D331A;
   --shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.25);
   --acme: 'Acme', sans-serif;
-  --lucky: 'Luckiest Guy', cursive;
+  --lucky: 'Luckiest Guy', sans-serif;
 }
 
 h1,
@@ -325,7 +325,7 @@ padding-top: 3.4rem;
 }
 
 .floating-button-pushable:active {
-  filter: grayscale(50%);
+  filter: grayscale(80%);
 }
 
 .floating-button {
